fix nav spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ i {
 }
 
 .information {
-  padding: 25px 0px 15px 150px;
+  padding: 25px 0px 15px 160px;
   display: block;
 }
 
